# virtual-filesystem-emulation

./: .gitignore  CMakeLists.txt  Constants.h  File.h  FileSystem.cpp  FileSystem.h  FileSystemStructs.h  SuperBlock.cpp  SuperBlock.h  VirtualDisc.cpp  VirtualDisc.h  main.cpp
file/: File.cpp
filesystem/: FileSystem.cpp  FileSystem.h
filesystem/disc/: VirtualDisc.cpp  VirtualDisc.h
filesystem/disc/parts/: DataBlock.h  FileDescriptor.h  SuperBlock.cpp  SuperBlock.h
